--- a/install/.Bash-utils/config/modules/main/debug.conf
+++ b/install/.Bash-utils/config/modules/main/debug.conf
@@ -18,7 +18,7 @@ function debug()
 
 		echo -ne "${__BU_MAIN_COLOR_TXT_RESET}"; echo -e; echo -e;
 
-		echo -e "${__BU_MAIN_COLOR_TXT_YELLOW}FUNCTION ${__BU_MAIN_COLOR_TXT_PINK}${p_function}${__BU_MAIN_COLOR_TXT_YELLOW} IN ${__BU_MAIN_COLOR_TXT_PINK}$p_file${__BU_MAIN_COLOR_TXT_YELLOW}, ON ${__BU_MAIN_COLOR_TXT_PINK}${p_line}${__BU_MAIN_COLOR_TXT_RESET}";
+		echo -e "${__BU_MAIN_COLOR_TXT_YELLOW}FUNCTION ${__BU_MAIN_COLOR_TXT_PINK}${p_function}${__BU_MAIN_COLOR_TXT_YELLOW} IN ${__BU_MAIN_COLOR_TXT_PINK}${p_file}${__BU_MAIN_COLOR_TXT_YELLOW}, ON ${__BU_MAIN_COLOR_TXT_PINK}${p_line}${__BU_MAIN_COLOR_TXT_RESET}";
 
 		echo -ne "${__BU_MAIN_COLOR_TXT_PINK}";
 
