Added the "OSMgr.conf" file and made some corrections with the "BU.ModuleInit.DisplayInitGlobalVarsInfos()" function call in the the Main module "Module.conf" file

--- a/install/.Bash-utils/config/modules/Software/Software.module.conf
+++ b/install/.Bash-utils/config/modules/Software/Software.module.conf
@@ -29,6 +29,21 @@ function BU.Software.ModConfig.Module.SoftwareModuleConfigFolderContent()
     declare -i v_lineno; # VAR TYPE : Int   - DESC : Line number of a global variable declaration.
 
     #**** Code ****
+    v_lineno="$(( LINENO + 2 ))";
+
+    __BU_SOFTWARE_MODULE_CONF_FILE_OSMGR_CONF="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "OSMgr.conf")" || {
+        BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${____BU_SOFTWARE_MOD__MODULE_CONF__LINENO}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
+
+        # TODO : Checking how to print a translated message from this module at this level of initialization of the "Software" module.
+
+        BU.ModuleInit.MsgAbort;
+
+        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
+
+        BU.ModuleInit.IsInScript && exit 1; return 1;
+    };
+
+
 
     return 0;
 }
@@ -64,6 +79,8 @@ __BU_SOFTWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_SOFTWARE
     BU.ModuleInit.IsInScript && exit 1; return 1;
 };
 
+DisplayInitGlobalVarsInfos '' "" '' "";
+
 # -----------------------------------------------
 
 
@@ -80,7 +97,11 @@ __BU_SOFTWARE_MODULE_LIB_MOD_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_SOFTWARE
 
 # Defining an associative array to store each sourced library file's path.
 __BU_SOFTWARE_MODULE_LIB_FILES_PATH_ARRAY=();
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_LIB_FILES_PATH_ARRAY' "" 'Array' "$" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_SOFTWARE_MODULE_LIB_FILES_PATH_ARRAY[@]}";
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_LIB_FILES_PATH_ARRAY' "" 'Array' \
+    "${}" \
+    "${}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))" "${__BU_SOFTWARE_MODULE_LIB_FILES_PATH_ARRAY[@]}";
 
 # -----------------------------------------------
 
@@ -88,7 +109,11 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_LIB_FILES_PATH_AR
 
 # Defining an associative array to store each sourced configuration file's path.
 __BU_SOFTWARE_MODULE_CONFIG_FILES_PATH_ARRAY=();
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_CONFIG_FILES_PATH_ARRAY' "" 'Array' "" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_SOFTWARE_MODULE_CONFIG_FILES_PATH_ARRAY[@]}";
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_CONFIG_FILES_PATH_ARRAY' "" 'Array' \
+    "${}" \
+    "${}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))" "${__BU_SOFTWARE_MODULE_CONFIG_FILES_PATH_ARRAY[@]}";
 
 # Storing the configuration files path variable values into an array to source, print and add easier into the "${__BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY}" associative array.
 # Those files contain, respectly, the :
@@ -102,10 +127,10 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_CONFIG_FILES_PATH
 
 __BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=();
 
-# Please source these files in this order of priority :
-#   - ${__BU_SOFTWARE_MODULE_CONF_FILE_EXIT_PATH}   ("Exit.conf")
-#   - ${__BU_SOFTWARE_MODULE_CONF_FILE_STATUS_PATH} ("Status.conf")
-#   - ${__BU_SOFTWARE_MODULE_CONF_FILE_INIT_PATH}   ("Project.conf")
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' \
+    "${}" \
+    "${}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))" "${__BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
 
 #   - Then the rest of the configuration files.
 __BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("${}" \
@@ -114,7 +139,5 @@ __BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("${}" \
     "${}" \
     "${}" \
     "${}");
-
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' "$" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "${__BU_SOFTWARE_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
 
 # -----------------------------------------------
