--- a/install/.Bash-utils/config/modules/main/module.conf
+++ b/install/.Bash-utils/config/modules/main/module.conf
@@ -64,32 +64,6 @@ function BU.Main.ModConfig.Module.BUSubFoldersPaths()
 
 
     # -----------------------------------------------------------------------------------------------------
-    # Bash Utils configuration files folder		|	Default parent folder --> "${__BU_MAIN_ROOT_DIR_PATH}/"
-    # -----------------------------------------------------------------------------------------------------
-
-    v_lineno="$(( LINENO + 2 ))";
-
-    __BU_MAIN_MODULE_CONF_DIR_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT__CONFIG_MODULES_DIR}" "$(BU.ModuleInit.GetModuleName "${BASH_SOURCE[0]}")" 'd')" || {
-        BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
-
-        printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
-            "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-            "${BASH_SOURCE[0]}" "${v_lineno}" '$__BU_MAIN_MODULE_CONF_DIR_PATH';
-
-        BU.ModuleInit.MsgAbort;
-
-        BU.ModuleInit.AskPrintLog || { if BU.ModuleInit.IsInScript; then BU.ModuleInit.Exit 1; else return 1; fi };
-
-        BU.ModuleInit.IsInScript && exit 1; return 1;
-    };
-
-    BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONF_DIR_PATH' \
-        "${__BU_MAIN_MODULE_CONF_DIR_PATH}" 'Dirpath' \
-        "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BUSubFoldersPaths__FNCT__CONFIG}" \
-        "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
-        "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${v_lineno}";
-
-    # -----------------------------------------------------------------------------------------------------
     # Bash Utils documentation folder			|	Default parent folder --> "${__BU_MAIN_ROOT_DIR_PATH}/"
     # -----------------------------------------------------------------------------------------------------
 
@@ -454,7 +428,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
     # ----------------------------------------------------------------------------------------------------------------------
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Colors.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "Colors.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -481,7 +455,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_BG_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "ColorsBG.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_BG_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "ColorsBG.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -508,7 +482,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_TEXT_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "ColorsText.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_TEXT_COLORS_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "ColorsText.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -535,7 +509,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_EXIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Exit.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_EXIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "Exit.conf" 'f')" || {
         .ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -561,7 +535,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Filesystem.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "Filesystem.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -588,7 +562,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_INIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Project.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_INIT_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "Project.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -615,7 +589,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_STATUS_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Status.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_STATUS_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "Status.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -642,7 +616,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_TEXT_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Text.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_TEXT_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "Text.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -669,7 +643,7 @@ function BU.Main.ModConfig.Module.MainModuleConfigFolderContent()
 
     v_lineno="$(( LINENO + 2 ))";
 
-    __BU_MAIN_MODULE_CONF_FILE_TIME_PATH="$(BU.ModuleInit.FindPath "${__BU_MAIN_MODULE_CONF_DIR_PATH}" "Time.conf" 'f')" || {
+    __BU_MAIN_MODULE_CONF_FILE_TIME_PATH="$(BU.ModuleInit.FindPath "${__BU_MODULE_INIT_CURRENT_MODULE_CONF_PATH}" "Time.conf" 'f')" || {
         BU.ModuleInit.PrintLogError "${BASH_SOURCE[0]}" "${v_lineno}" 'ERR_BU_MAIN_MOD_CONF__INIT_VARPATH_FAILED';
 
         printf "${__BU_MODULE_INIT_MSG__PRINT_MISSING_PATH_FOR_DEFINED_GLOBAL_VARIABLE__NO_FNCT}" \
@@ -771,7 +745,10 @@ else
     if [ -f "${__BU_MODULE_INIT__LIB_ROOT_DIR__FILE_PATH}" ]; then
         __BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH="${__BU_MODULE_INIT__LIB_ROOT_DIR__FILE_PATH}";
 
-        BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH' "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" 'Filepath' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
+        BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH' "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" 'Filepath' \
+            "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}" \
+            "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
     # Including the same file, if it was generated by the "install_and_update.sh" file when executed with root privileges
     # (failsafe for the users who cannot execute this file with these privileges, if the same file than the one above exists
@@ -790,8 +767,9 @@ else
 
         # shellcheck disable=SC2059
         BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_ROOT_DIR_PATH' "${__BU_MAIN_ROOT_DIR_PATH}" 'Dirpath' \
-            "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_ROOT_DIR_PATH}" \
-            "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}")" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${____bu_main_modconfig_lineno}";
+            "$(printf "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_ROOT_DIR_PATH}" "${__BU_MAIN_ROOT_DIR_PATH_STORAGE_FILE_PATH}")" \
+            "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+            "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "${____bu_main_modconfig_lineno}";
 
         # Checking if the library's root folder path written in this file is valid.
         if [ ! -d "${__BU_MAIN_ROOT_DIR_PATH}" ]; then declare -i ____bu_main_modconfig_lineno="${LINENO}"; # VAR TYPE : Int   - DESC : Line number of the error occurence.
@@ -951,7 +929,11 @@ BU.Main.ModConfig.Module.MainModuleInitializerPath;
 
 # Path to the function files of the main module's library.
 __BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY=("${__BU_MAIN_MODULE_LIB_MOD_DIR_PATH}/"*.lib);
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))" "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY' "" 'Array' \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))" "${__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_ARRAY[@]}";
 
 # -----------------------------------------------
 
@@ -969,8 +951,12 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_FUNCTIONS_FILES_PATH_
 # after the main module's initialization.
 
 # It MUST NOT store any value now, it will be processed in the main module's initializer file.
-__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY=()
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "" 'Array' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY=();
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY' "" 'Array' \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_ARRAY}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # -----------------------------------------------
 
@@ -978,7 +964,11 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_MODIFIED_STATUS_VARS_
 
 # Defining an associative array to store each sourced library file's path.
 __BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY=();
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY' "" 'Array' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY' "" 'Array' \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # -----------------------------------------------
 
@@ -986,7 +976,11 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIB_FILES_PATH_ARRAY'
 
 # Defining an associative array to store each sourced configuration file's path.
 __BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY=();
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY' "" 'Array' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-1 ))";
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY' "" 'Array' \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARRAY}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))";
 
 # Storing the configuration files path variable values into an array to source, print and add easier into the "${__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY}" associative array.
 # Those files contain, respectly, the :
@@ -999,6 +993,11 @@ BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_CONFIG_FILES_PATH_ARR
 #   - Time variable
 
 __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY=();
+
+BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' \
+    "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY}" \
+    "${__BU_MODULE_INIT_MSG__DISP_INIT_GLOB_VARS_INFO__IS_VAR_DEF_IN_INITIALIZER__MAIN_MODULE_CONF}" \
+    "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO - 2 ))" "${__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
 
 # Please source these files in this order of priority :
 #   - ${__BU_MAIN_MODULE_CONF_FILE_EXIT_PATH}   ("Exit.conf")
@@ -1015,7 +1014,5 @@ __BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY+=("${__BU_MAIN_MODULE_CONF_FILE_EX
     "${__BU_MAIN_MODULE_CONF_FILE_FILESYSTEM_PATH}" \
     "${__BU_MAIN_MODULE_CONF_FILE_TEXT_PATH}" \
     "${__BU_MAIN_MODULE_CONF_FILE_TIME_PATH}");
-
-BU.ModuleInit.DisplayInitGlobalVarsInfos '__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY' "" 'Array' "${__BU_MODULE_INIT_MSG__BU_MAIN_MODCONFIG__MODULE__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY}" "${BASH_SOURCE[0]}" "${FUNCNAME[0]}" "$(( LINENO-4 ))" "${__BU_MAIN_MODULE_LIST_CONFIG_FILES_PATH_ARRAY[@]}";
 
 # -----------------------------------------------
